<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#000000"
        android:textSize="48sp"
        android:text=""
        android:textColor="@color/white"
        android:gravity="end|center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="#E6000000"

        >

        <Button
            android:id="@+id/btnAllClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="C"
            android:textColor="#F30808"
            android:textSize="30dp"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btnPecentage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:textColor="#60DF66"
            android:text="@string/percentage"
            android:textSize="30dp"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onBackspace"
            android:textColor="#60DF66"
            android:text="@string/back"
            android:textSize="30dp"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:textSize="30dp"
            android:textColor="#60DF66"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="#E6000000"
        >

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:text="@string/_7"
            android:textSize="30dp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textSize="30dp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textSize="30dp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/multiply"
            android:textSize="30dp"
            android:textColor="#60DF66"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="#E6000000"
        >

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textSize="30dp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:text="@string/_5"
            android:textSize="30dp"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="30dp"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/minus"
            android:textSize="30dp"
            android:textColor="#60DF66"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="#E6000000"
        >

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textSize="30dp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textSize="30dp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textSize="30dp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/add"
            android:textSize="30dp"
            android:textColor="#60DF66"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="#E6000000"
        >

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textSize="30dp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn00"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:text="@string/_00" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:textSize="40dp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:textSize="30dp"
            android:textColor="#60DF66"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>


</LinearLayout>